# svont-cms

./: README.md
automation/: 1.0.env_init.sh  1.1.env_reinit.sh  2.create_resources.sh  3.deploy_service.sh  4.deploy_client.sh
client/: package-lock.json  tsconfig.json
client/.svelte-kit/: ambient.d.ts
client/.svelte-kit/types/: route_meta_data.json
client/src/lib/: Comments.svelte  DataInterface.ts  DataService.google.ts  DataService.ts  Header.svelte  Post.card.svelte  Post.header.svelte  Post.popular.svelte  Search.box.svelte  SignIn.svelte  User.popup.svelte
client/src/routes/: +layout.svelte
client/static/: ckeditor.js
clients/svont-web/: .firebaserc  firebase.json  package-lock.json  package.json  svelte.config.js
clients/svont-web/.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache
clients/svont-web/src/: app.html
clients/svont-web/static/: ckeditor.js  (+1 more)
service/: Dockerfile  go.mod  go.sum  main.go  start.sh
service/content/: content.go  utils.go
service/data/: gcs.go  provider.go
service/localdata/: index_count_likes.json  index_headers.json  index_popularity_likes.json  index_popularity_views.json  index_time.json  index_users.json
services/svont-svc/: .gitignore  README.md  bulk_load.sh  main.go  scratchpad.txt  start.sh
services/test-services/test_rust/: .gitignore  Cargo.toml  scratchpad.txt
services/test-services/test_rust/examples/: post1.json
services/test-services/test_rust/src/: main.rs
services/test-services/test_rust/src/routes/: content.rs
services/test-services/test_rust/src/services/: content.rs
(+136 files in other folders)
