[package]
name = "cms_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.60"
dotenv = "0.15.0"
google-cloud-storage = "0.6.1"
chrono = "0.4.23"
